--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </div>
 
 
-
+    <script>for(var i=0;i<1;i++) alert("条件允许，欢迎打赏\n仅作娱乐用途，请勿过分解读");</script>
     <div id="adContainer" style="display:none;position: absolute;top:0px;left: 0px;width:100%;height:100%;z-index:999;"></div>
     <div id="loadingText" style="width:100%;display: none;text-align:center;position:absolute;top:45%;z-index:2;font-size:20px;color:#f99f0a">
         捉老师中......0%
